--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ main{
     background-image: url(src/image_1.png);
     background-size: cover;
     height: 850px;
-    width: 1570px;
+    width: 1520px;
+    margin: 20px;
 }
 p{
     padding: 10px ;
@@ -10,7 +11,7 @@ p{
 }
 button{
     height: 100px;
-    width: 450px; 
+    width: 495px; 
     background-color: white;
 
 }
@@ -36,10 +37,31 @@ button{
 }
 .img2{
    float:right;
-   width: 67%;
-   height: 70%;
-   margin-top: 50px;
+   width: 70%;
+   height: 80%;
+   padding-top: 50px;
+  
   }
+  .img3{
+    float:right;
+    width: 370px;
+    height: 370px;
+    padding-top: 50px;
+    
+   }
+   .img4{
+    float:right;
+    width: 370px;
+    height: 370px;
+    padding-top: 450px;
+    
+   }
+   .img5{
+    float:right;
+    width: 370px;
+    height:370px;
+    padding-top: 50px;
+   }
 .obshii_text{
     float:left;
     width: 30%;
@@ -56,3 +78,15 @@ header{
     width: 350px;
     height: 80px;
 }
+.pagethree{
+    
+    background: #E58716;
+    width: 100%;
+    height: 100%;
+}
+.text3{
+    
+    text-align: left;
+    
+   
+ }
