--- a/style.css
+++ b/style.css
@@ -13,11 +13,39 @@ button{
     height: 100px;
     width: 495px; 
     background-color: white;
+    font-size: 25px;
+}
+.button:hover{
+     transition-property: background-color, border-radius;
+     transition-duration: 0.5s;
+     background-color: #f5f5f5;
+     border-radius: 20px;
+}
+
+.button1:hover{
+    transition-property: background-color, border-radius;
+    transition-duration: 0.5s;
+    background-color: #f5f5f5;
+    border-radius: 20px;
+}
+
+.button2:hover{
+    transition-property: background-color, border-radius;
+    transition-duration: 0.5s;
+    background-color: #f5f5f5;
+    border-radius: 20px;
+}
+
+.button3:hover{
+    transition-property: background-color, border-radius;
+    transition-duration: 0.5s;
+    background-color: #f5f5f5;
+    border-radius: 20px;
 
 }
-.button1{
-    
-}
+
+
+
 .text2{
     
    text-align: left;
@@ -44,8 +72,8 @@ button{
   }
   .img3{
     float:right;
-    width: 370px;
-    height: 370px;
+    width: 360px;
+    height: 360px;
     padding-top: 50px;
     
    }
@@ -58,10 +86,48 @@ button{
    }
    .img5{
     float:right;
-    width: 370px;
-    height:370px;
-    padding-top: 50px;
+    width: 360px;
+    height:360px;
+    padding-top: 20px;
+
    }
+   .img6{
+   
+    width: 460px;
+    height:250px;
+    padding-top: 50px;
+
+   }
+   .img7{
+    
+    width: 460px;
+    height:292px;
+    padding-top: 10px;
+
+   }
+   .img8{
+    
+    width: 460px;
+    height:300px;
+    padding-top: 20px;
+   
+   }
+   .img9{
+    
+    width: 440px;
+    height:270px;
+    padding-top: 50px;
+   
+   }
+   .twostr{
+       float: right;
+       padding-left: 200px;
+}
+.onestr{
+   
+    padding-left: 50px;
+}
+
 .obshii_text{
     float:left;
     width: 30%;
@@ -89,6 +155,15 @@ header{
     text-align: left;  
    
  }
- .mirage{
-    
+ .pagefour{
+    display: none;
+    background: #E58716;
+    width: 100%;
+    height: 100%;
  }
+ .text2{
+    
+    text-align: left;
+ }
+ 
+ 
